--- a/app/components/error.module.scss
+++ b/app/components/error.module.scss
@@ -10,7 +10,7 @@
         border-radius: 12px;
         padding: 24px;
 
-        background-color: #af2424; // Warm red color
+        background-color: #7A93AF; // Warm red color
         color: #fff; // White text color for contrast  
         
         .link {
